Added temperature buttons and styled

--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
 
     <section class="temp-block">
         <h1>Temperature</h1>
+        <section class="temp-displays">
+            <h2>
+                Temp in Farhenheit
+            </h2>
+            <button id="increase-temp">+</button>
+            <section id="chosen-temp-container">
+                <h3 id="default-temp">32</h3>
+            </section>
+            <button id="decrease-temp">-</button>
+        </section>
+        <section class="temp-displays">
+            <h2>
+                Temp in Celcuis
+            </h2>
+            <button id="increase-temp">+</button>
+            <section id="chosen-temp-container">
+                <h2 id="default-temp">0</h2>
+            </section>
+            <button id="decrease-temp">-</button>
+        </section>
     </section>
+    <script src="src/index.js"></script>
 </body>
 </html>
