adding work so far wave 1/2 ish

--- a/index.html
+++ b/index.html
@@ -5,8 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <h1 class="cover_name">Weather report</h1>
+        <section>
+            <p>For the lovely city of</p>
+            <p class="city_name">Seattle 
+            </p>
+        </section>
+    </header>
+    <main>
+        <section class="Temp">
+            <h1 class="temperature">Temperature</h1>
+
+            <section>
+                <button id="tempUp">⬆️</button>
+            </section>
+
+            <section>
+                <button id="tempDown">⬇️</button>
+            </section>
+
+            <section class="temp">
+                <p id="tempCount">0</p>
+            </section>
+        </section>
+
+
+        <section class="Sky">
+          <h2 class="Sky">Sky</h2>
+          <label for="sky">Choose a sky:</label>
+
+          <select name="skyOptions" id="sky">
+            <option value="sunny">Sunny</option>
+            <option value="cloudy">Cloudy</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowy">Snowy</option>
+          </select>
+        </section>
+
+        <h3 class="city_name">City Name</h3>
+
+        <section class="Weather">
+          <h4 class="weather_garden">Weather Garden</h4>
+
+          <section>
+            <p id="skyEmoji">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</p>
+              <p id="wetherEmoji">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</p>
+          </section>
+
+        </section>
+
+        <script src="src/index.js"></script>
+    </main>
 </body>
 </html>
+
+<!-- <body>
+    <section id="lightthemecontrol">
+    <main>
+      <h1>🍣 Welcome to my Suhshi Fan Site 🍣</h1>
+      <p>Here is where I post sushi recipes</p>
+
+      <section>
+        <button id="addCrabButton">Add Sushi</button>
+      </section>
+
+      <section id="crabContainer">
+        <h2 id="crabCount">Sushi Count: 0</h2>
+
+      </section>
+
+      <section>
+        <button id="adddarkbutton">Change to Dark</button>
+      </section>
+
+
+      <section id="darkbuttoncont">
+        <h3 id="Darktext">Dark Theme</h3>
+
+      </section>
+    </main>
+    </section>
+    <script src="src/index.js"></script>
+  </body>
+</html> -->
