--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </section>
         <section id="city-container" class="background">
             <h2>City</h2>
-            <img src="assets/images/city_clipart.jpeg" alt="cloudy clipart" width="170px" height="170px">
-            <input id="cityNameInput" class="input-margin"type="text" value="Seattle">
+            <img id="cityImage" src="assets/images/city_clipart.jpeg" alt="city clipart" width="170px" height="170px">
+            <input id="cityNameInput" class="input-margin"type="text" value="">
             <button id="resetCityNameBtn" class="input-margin">reset</button>
         </section>
         <section id="layout-container" class="background">
