--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 </head>
 <body>
     <section id ="headers">
-         <div id ="weather-header"><span class='bigger'>Weather Report</span> &nbsp;&nbsp; <span class="small">For the lovely city of</span> <span class="dynamic">here change the city dynamically</span></div>
+         <div id ="weather-header"><span class='bigger'>Weather Report</span> &nbsp;&nbsp; <span class="small">For the lovely city of </span> ✨<span class="dynamic">here change the city dynamically</span>✨</div>
          <!-- <div id ="lovely-city"> For the lovely city of</div>
          <div id ="header-city">here change the city dynamically</div> -->
     </section>
 
     <section id =three-boxes>
-        <div id="temp">Temperature</div>
+    <div id="temp">
+            
+        <label for="temps">Temperature</p>
+    <section id="button-tempvalue">
+        <section id="buttons">
+        <button id="up-arrow">⬆️</button>
+        <button id ="down-arrow">⬇️</button>
+        </section>
+    <h2 id="temp-value"></h2>
+  </section>
+    </div>
         <div id="sky">
             <label for ="skies">Sky</label><br>
         <select id="sky-options">
@@ -32,7 +42,9 @@
         </div>
     </section>
     <!-- <button name="button" id="selectbutton">Select </button>
-    <input id="number" type="number"> -->
+   
+     <input id="number" type="number"> -->
+     <footer>©ByRoza</footer>
    <script src="src/index.js"></script>
 </body>
 </html>
