--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Weather Report</h1>
         <h3>For the lovely city of</h3>
-        <h2>✨City Name✨</h2>
+        <h2 id="city-name">✨Seattle✨</h2>
     </header>
     <main>
         <section>
@@ -33,7 +33,7 @@
         </section>
         <section>
             <h2>City Name</h2>
-            <input type="text" name="city" placeholder="Seattle" value="">
+            <input type="text" id="city-input" name="city" placeholder="Seattle" value="">
             <button id="reset-city">Reset</button>
         </section>
         <section>
