added basic html outline

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Weather Report</h1>
+        <span>for</span>
+        <span class="cityName"></span>
+        <section class="cityNameBox">
+            <h2>Change City</h2>
+            <input type="text" value = "Terre Haute">
+            <button>Reset</button> 
+        </section>
+    </header>
+    <section class="tempLandscape">
+    </section>
+    <section class="skyPicture">
+    </section>
+    <section class="tempBox">
+        <h2>Temperature</h2>
+        <span id="temp">75 &#8457;</span>
+        <span id="increseTemp">&#8593;</span>
+        <span id="decreseTemp">&#8595;</span>
+    </section>
+    <section class="skyBox">
+        <h2>Sky</h2>
+        <select>
+            <option>Sunny</option>
+            <option>Cloudy</option>
+            <option>Rainy</option>
+            <option>Snowy</option>
+            <option>Firenado</option>
+        </select>
+    </section>
 </body>
 </html>
