Create changeSky() and media queries to style page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <form class ="sky-side-container" action="#">
             <span>Sky</span><br><br>
             <select id="sky-type" name="sky">
+                <option value="select">select one</option>
                 <option value="Rainy">Rainy</option>
                 <option value="Sunny">Sunny</option>
                 <option value="Snowy">Snowy</option>
