Change increase/decrease buttons to emoji arrows

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>Rhyannon's Weather Report</title>
 </head>
 <body>
+    <header class="header">
+        <h1>Weather Report</h1>
+        <span>
+            City:
+            <span id="header-City-name" class="header-city-name"></span>
+            <!-- ::before -->
+            Salt Lake City
+            <!-- ::after -->
+        </span>
+    </header>
+
     <div class="location">
         <h1 class="location-timezone">Timezone</h1>
         <p>Icon</p>
@@ -21,8 +32,8 @@
         <span>F</span>
     </div>
         <div class="temperature-description">Chilly Willy</div>
-        <button id="Increase-Temperature" type="button">Increase Temperature</button>
-        <button id="Decrease-Temperature" type="button">Decrease Temperature</button>
+        <button id="increase-temperature" type="button">🔼</button>
+        <button id="decrease-temperature" type="button">🔽</button>
     </div>
     <div>
 
