organize eventListener calls

--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
                 <div class="dropdown">
-                    <button onclick="changeSky()" class="dropbtn">Dropdown</button>
-                    <div id="myDropdown" class="dropdown-content">
-                        <span>Sunny</span>
-                        <span>Cloudy</span>
-                        <span>Rainy</span>
-                        <span>Snowy</span>
-                    </div>
+                    <button class="dropbtn">Dropdown</button>
+                    <select id="myDropdown" class="dropdown-content">
+                        <option>Sunny</option>
+                        <option>Cloudy</option>
+                        <option>Rainy</option>
+                        <option>Snowy</option>
+                    </select>
                     </div>
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
+                <button></button>
             </li>
         </ul>
     </nav>
