adds landscape according to temperatur

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <div class="features" id="gardenContainer">
             <p class="garden">Weather Garden</p>
+            <section id="displayFeature"></section>
         </div>
         
         </div>
