Changed font-family to major mono display

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;400;600;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../styles/index.css"/>
     <title>Rhyannon's Weather Report</title>
 </head>
@@ -15,7 +15,7 @@
         <h1>Weather Report</h1>
         <span>
             City:
-            <span id="header-City-name" class="header-city-name"></span>
+            <span id="header-city-name" class="header-city-name"></span>
             <!-- ::before -->
             Salt Lake City
             <!-- ::after -->
@@ -23,12 +23,12 @@
     </header>
 
     <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
+        <h2 class="location-timezone">Timezone</h2>
         <p>Icon</p>
     </div>
     <div class="temperature">
         <div class="degree-section">
-        <h2 class="temperature-degree">34</h2>
+        <p class="temperature-degree">34</p>
         <span>F</span>
     </div>
         <div class="temperature-description">Chilly Willy</div>
