--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
+  <div class="wrapper">
     <header>
         <h1 class="cover_name">Weather report</h1>
         <section>
@@ -36,9 +37,9 @@
 
         <section class="Sky">
           <h2 class="Sky">Sky</h2>
-          <label for="sky">Choose a sky:</label>
+          <label for="skyoption">Choose a sky:</label>
 
-          <select name="skyOptions" id="sky">
+          <select id="skyOptions">
             <option value="sunny">Sunny</option>
             <option value="cloudy">Cloudy</option>
             <option value="rainy">Rainy</option>
@@ -48,18 +49,22 @@
 
         <h3 class="city_name">City Name</h3>
 
-        <section class="Weather">
+        <div class="Weather">
           <h4 class="weather_garden">Weather Garden</h4>
 
           <section>
             <p id="skyEmoji">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</p>
-              <p id="wetherEmoji">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</p>
+          </section>
+          
+          <section>
+            <p id="wetherEmoji">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</p>
           </section>
 
-        </section>
+        </div>
 
         <script src="src/index.js"></script>
     </main>
+  </div>
 </body>
 </html>
 
