Changed temperature button emojis + styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <p class="temperature-degree">34</p>
         <span>F</span>
     </div>
-        <button id="increase-temperature" type="button">🔼</button>
-        <button id="decrease-temperature" type="button">🔽</button>
+        <button id="increase-temperature" type="button">▲</button>
+        <button id="decrease-temperature" type="button">▽</button>
     </div>
     <section class="sky-section">
         <h2>Sky</h2>
