Wave 3 passes, selection changes sky

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     
     <section class="sky-selection-section">
         <h2>SKY</h2>
-        <select id="skyselector" onchange="currentSky()">
+        <select id="skyselector" >
+            <option value="">select option</option>
             <option value="sunny">Sunny</option>
             <option value="cloudy">Cloudy</option>
             <option value="rainy">Rainy</option>
