add change view functions

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <section class="col-8 view-section">
                     <h3>Weather Activity</h3>
                     <div class="view-background">
-                        <p class="sky-emoji"></p>
-                        <p class="activity-emoji">
+                        <div class="sky-emoji emoji"></div>
+                        <div class="activity-emoji emoji"></div>
                     </div>
                 </section>
             </div>
