--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-    
-</body>
+    <header class="header_section">
+        <h1>Weather Report</h1>
+        <span class="subheader">
+            <span id="headerCityName" class="header_city">For the lovely city of Seattle</span>
+        </span>
+    </header>
 </html>
