--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
             </li>
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
-                <div class="dropdown">
-                    <button class="dropbtn">Dropdown</button>
-                    <select id="myDropdown" class="dropdown-content">
+                    <select id="skySelection" class="dropdown-content">
+                        <option>--Please choose an option--</option>
                         <option>Sunny</option>
                         <option>Cloudy</option>
                         <option>Rainy</option>
                         <option>Snowy</option>
                     </select>
-                    </div>
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
@@ -39,8 +37,8 @@
     <main class="main">
         <h2>Weather Garden</h2>
         <ul id="garden-display">
-            <li id ="garden-clouds">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</li>
-            <li id ="garden-flowers">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</li>
+            <li id ="garden-clouds">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</li>
+            <li id ="garden-flowers">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃'</li>
         </ul>
     </main>
     <script src="scripts/index.js"></script>
