User input sections bones

--- a/index.html
+++ b/index.html
@@ -14,4 +14,15 @@
             <span id="headerCityName" class="header_city">For the lovely city of Seattle</span>
         </span>
     </header>
+    <div class="user_events">
+        <section class="temperature_section">
+            <h2 id = "temperatureTitle" >Temperature</h2>
+            <div class="temperature_content">
+                <div class="temperature_buttons">
+                    <span id="increaseTempControl">⬆️</span>
+                    <span id="decreaseTempControl">⬇️</span>
+                </div>
+                <span id="tempValue"></span>
+            </div>
+        </section>
 </html>
