adds grid container for page layout

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Weather Report</title>
     <link href="styles/index.css" rel="stylesheet" />
 </head>
-<body>
+<body class="container">
     <section id="title">
-        <h1 id="title-text">Weather Report Cabebe!</h1>
+        <h1 id="title-text" class="text">Weather Report Cabebe!</h1>
     </section>
-    <section id="city-display">Placeholder: City Text!</section>
     <section id="sky-display">Placeholder: Image of a sky</section>
+    <section id="city-display">Placeholder: City Text!</section>
     <section id="city-input-block">Placeholder: input box for city here</section>
     <section id="temperature-block">
-        <button id="increase-temp">⬆️</button>
         <h2>Temperature</h2>
+        <button id="increase-temp">⬆️</button>
         <button id="decrease-temp">⬇️</button>
     </section>
     <section id="sky-select-block">Placeholder: dropdown button for Sky!</section>
