--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 <body class="container">
     <section id="title">
-        <h1 id="title-text" class="text">Weather Report Cabebe!</h1>
+        <h1 id="title-text" class="text">Weather Report</h1>
     </section>
     <section id="sky-display">Placeholder: Image of a sky</section>
-    <section id="city-display">Placeholder: City Text!</section>
-    <section id="city-input-block">Placeholder: input box for city here</section>
+    <section id="city-display">
+        <h3 class="text">Coming to you live from</h3>
+    </section>
+    <section id="city-input-block">
+        <h2 class="text">Where ya at?</h2>
+    </section>
     <section id="temperature-block">
-        <h2>Temperature</h2>
+        <h2 class="text">Temperature</h2>
         <button id="increase-temp">⬆️</button>
         <button id="decrease-temp">⬇️</button>
     </section>
-    <section id="sky-select-block">Placeholder: dropdown button for Sky!</section>
+    <section id="sky-select-block">
+        <h2 class="text">Choose your sky:</h2>
+    </section>
     <section id="landscape-block">Placeholder: picture of a landscape</section>
 </body>
 </html>
