--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <section class= "main_header">
+        <h1>Weather Report</h1>
+        <h3>For the wonderful city..</h3>
+    </section>
+    <section class= "temperature">
+        <h2>Temperature</h2>
+        <div class= "temp_content">
+            <span id= "increaseTemp">⬆️</span>
+            <span id= "decreaseTemp">⬇️</span>
+            <span id= "tempFarenheit">70</span>
+        </div>
+    </section>
+    <section class= "sky">
+        <h2>Sky</h2>
+        <select id="skyOptions">
+            <option>Sunny</option>
+            <option>Cloudy</option>
+            <option>Rainy</option>
+            <option>Snowy</option>
+        </select>
+    </section>
+    <section class="city_name">
+        <h2>City Name</h2>
+        <input type="text" id="cityNameInput" value="Seattle"/>
+        <button id="cityNameReset">Reset</button>
+    </section>
+    <section class="garden">
+        <h2>Weather Garden</h2>
+        <div id="gardenContent" class="garden_content">
+            <div id="sky"></div>
+            <div id="ground"></div>
+        </div>
+    </section>
+    <script src="src/index.js"></script>
 </body>
 </html>
