Add reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <section class="header-cover" id="top">
             <h1 class="title"> Kristin's Weather Report</h1>
-            <h3 id="subtitle">For the lovely city of <span id="cityNameDisplay">Seattle</span></h3>
+            <h3 id="subtitle">For thse lovely city of <span id="cityNameDisplay">Seattle</span></h3>
         </section>
     </header>
     <main>
@@ -25,9 +25,8 @@
 
         <section id="cityNameContainer">
             <h2>City Name</h2>
-            <label for="city">Enter City Name:</label>
-            <input type="text" id="inputCity" name="inputCity" placeholder="Seattle" />
-            <p id="logCity"></p>
+            <input type="text" id="inputCity" name="inputCity" placeholder="Enter City Name" />
+            <button id="resetCity">Reset</button>
         </section>
 
         <section id="skyContainer">
