update changeCloud if statement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class = "grid">
     <header class=header>
         <h1>Weather Report</h1>
-        <p>For the lovely city of </p>
+        <p id="city-header">For the lovely city of Okaytown!</p>
     </header>
     <nav class="nav">
         <ul class="ul-container">
@@ -30,7 +30,7 @@
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
-                <button></button>
+                <input type="text" id="city-input">
             </li>
         </ul>
     </nav>
